proj2_windows_sh_2